--- a/includes/page-solution.html
+++ b/includes/page-solution.html
@@ -15,15 +15,15 @@
 <header class="solution">
     <div class="owl-carousel owl-theme animation">
         <div class="slide-1"></div>
-        <div class="slide-1-2"></div>
+        <div class="slide-1-2"><div class="caption arrow">Store your bolster here</div></div>
         <div class="slide-2"><div class="caption arrow">Store your couch cushions here at night</div></div>
-        <div class="slide-3"><div class="caption arrow">Store your bolster here</div></div>
+        <div class="slide-3"></div>
         <div class="slide-4"></div>
         <div class="slide-5"></div>
         <div class="slide-6"></div>
         <div class="slide-7"></div>
-        <div class="slide-7-2"></div>
-        <div class="slide-8"><div class="caption arrow">The ultra suede bolster will match the headboard color you choose</div></div>
+        <div class="slide-7-2"><div class="caption arrow">The ultra suede bolster will match the headboard color you choose</div></div>
+        <div class="slide-8"></div>
         <div class="slide-9"><div class="caption">Pleanty of closet storage for you or a guest</div></div>
         <div class="slide-10"><div class="caption">Lots of storage based on the custom configuration to best fit your room</div></div>
         <div class="slide-10"></div>
