--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -185,13 +185,15 @@ body {
     body header.solution .owl-carousel .owl-item > div.slide-1-2 {
       background-image: url("../img/home/home-1-2.jpg"); }
       body header.solution .owl-carousel .owl-item > div.slide-1-2 .caption {
+        left: 60%;
+        top: 25%; }
+    body header.solution .owl-carousel .owl-item > div.slide-1-3 {
+      background-image: url("../img/home/home-1-3.jpg"); }
+      body header.solution .owl-carousel .owl-item > div.slide-1-3 .caption {
         left: 40%;
         top: 50%; }
     body header.solution .owl-carousel .owl-item > div.slide-2 {
       background-image: url("../img/home/home-2.jpg"); }
-      body header.solution .owl-carousel .owl-item > div.slide-2 .caption {
-        left: 62%;
-        top: 30%; }
     body header.solution .owl-carousel .owl-item > div.slide-3 {
       background-image: url("../img/home/home-3.jpg"); }
     body header.solution .owl-carousel .owl-item > div.slide-4 {
@@ -219,6 +221,9 @@ body {
         top: 20%; }
     body header.solution .owl-carousel .owl-item > div.slide-10 {
       background-image: url("../img/home/home-10.jpg"); }
+      body header.solution .owl-carousel .owl-item > div.slide-10 .caption {
+        left: 50%;
+        top: 40%; }
     body header.solution .owl-carousel .owl-item > div .caption {
       background-color: rgba(55, 49, 45, 0.8);
       box-sizing: border-box;
