--- a/includes/page-solution.html
+++ b/includes/page-solution.html
@@ -15,8 +15,9 @@
 <header class="solution">
     <div class="owl-carousel owl-theme animation">
         <div class="slide-1"></div>
-        <div class="slide-1-2"><div class="caption arrow">Store your bolster here</div></div>
-        <div class="slide-2"><div class="caption arrow">Store your couch cushions here at night</div></div>
+        <div class="slide-1-2"><div class="caption arrow">Store your couch cushions here at night</div></div>
+        <div class="slide-1-3"><div class="caption arrow">Store your bolster here</div></div>
+        <div class="slide-2"></div>
         <div class="slide-3"></div>
         <div class="slide-4"></div>
         <div class="slide-5"></div>
