--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -142,29 +142,31 @@ body {
       height: calc(100vh - 180px);
       min-height: 360px; }
       body header.home .owl-carousel.home .owl-item div.slide-1 {
-        background-image: url("../img/home/home-1.jpg"); }
+        background-image: url("../img/slides/home-1.jpg"); }
       body header.home .owl-carousel.home .owl-item div.slide-1-2 {
-        background-image: url("../img/home/home-1-2.jpg"); }
+        background-image: url("../img/slides/home-1-2.jpg"); }
+      body header.home .owl-carousel.home .owl-item div.slide-1-3 {
+        background-image: url("../img/slides/home-1-3.jpg"); }
       body header.home .owl-carousel.home .owl-item div.slide-2 {
-        background-image: url("../img/home/home-2.jpg"); }
+        background-image: url("../img/slides/home-2.jpg"); }
       body header.home .owl-carousel.home .owl-item div.slide-3 {
-        background-image: url("../img/home/home-3.jpg"); }
+        background-image: url("../img/slides/home-3.jpg"); }
       body header.home .owl-carousel.home .owl-item div.slide-4 {
-        background-image: url("../img/home/home-4.jpg"); }
+        background-image: url("../img/slides/home-4.jpg"); }
       body header.home .owl-carousel.home .owl-item div.slide-5 {
-        background-image: url("../img/home/home-5.jpg"); }
+        background-image: url("../img/slides/home-5.jpg"); }
       body header.home .owl-carousel.home .owl-item div.slide-6 {
-        background-image: url("../img/home/home-6.jpg"); }
+        background-image: url("../img/slides/home-6.jpg"); }
       body header.home .owl-carousel.home .owl-item div.slide-7 {
-        background-image: url("../img/home/home-7.jpg"); }
+        background-image: url("../img/slides/home-7.jpg"); }
       body header.home .owl-carousel.home .owl-item div.slide-7-2 {
-        background-image: url("../img/home/home-7-2.jpg"); }
+        background-image: url("../img/slides/home-7-2.jpg"); }
       body header.home .owl-carousel.home .owl-item div.slide-8 {
-        background-image: url("../img/home/home-8.jpg"); }
+        background-image: url("../img/slides/home-8.jpg"); }
       body header.home .owl-carousel.home .owl-item div.slide-9 {
-        background-image: url("../img/home/home-9.jpg"); }
+        background-image: url("../img/slides/home-9.jpg"); }
       body header.home .owl-carousel.home .owl-item div.slide-10 {
-        background-image: url("../img/home/home-10.jpg"); }
+        background-image: url("../img/slides/home-10.jpg"); }
     body header.home h2 {
       color: #37312d;
       font-size: 2vw;
@@ -181,46 +183,46 @@ body {
     min-height: 640px;
     /* new assets*/ }
     body header.solution .owl-carousel .owl-item > div.slide-1 {
-      background-image: url("../img/home/home-1.jpg"); }
+      background-image: url("../img/slides/home-1.jpg"); }
     body header.solution .owl-carousel .owl-item > div.slide-1-2 {
-      background-image: url("../img/home/home-1-2.jpg"); }
+      background-image: url("../img/slides/home-1-2.jpg"); }
       body header.solution .owl-carousel .owl-item > div.slide-1-2 .caption {
         left: 60%;
         top: 25%; }
     body header.solution .owl-carousel .owl-item > div.slide-1-3 {
-      background-image: url("../img/home/home-1-3.jpg"); }
+      background-image: url("../img/slides/home-1-3.jpg"); }
       body header.solution .owl-carousel .owl-item > div.slide-1-3 .caption {
         left: 40%;
         top: 50%; }
     body header.solution .owl-carousel .owl-item > div.slide-2 {
-      background-image: url("../img/home/home-2.jpg"); }
+      background-image: url("../img/slides/home-2.jpg"); }
     body header.solution .owl-carousel .owl-item > div.slide-3 {
-      background-image: url("../img/home/home-3.jpg"); }
+      background-image: url("../img/slides/home-3.jpg"); }
     body header.solution .owl-carousel .owl-item > div.slide-4 {
-      background-image: url("../img/home/home-4.jpg"); }
+      background-image: url("../img/slides/home-4.jpg"); }
     body header.solution .owl-carousel .owl-item > div.slide-5 {
-      background-image: url("../img/home/home-5.jpg"); }
+      background-image: url("../img/slides/home-5.jpg"); }
     body header.solution .owl-carousel .owl-item > div.slide-6 {
-      background-image: url("../img/home/home-6.jpg"); }
+      background-image: url("../img/slides/home-6.jpg"); }
       body header.solution .owl-carousel .owl-item > div.slide-6 .caption {
         left: 45%;
         top: 25%; }
     body header.solution .owl-carousel .owl-item > div.slide-7 {
-      background-image: url("../img/home/home-7.jpg"); }
+      background-image: url("../img/slides/home-7.jpg"); }
     body header.solution .owl-carousel .owl-item > div.slide-7-2 {
-      background-image: url("../img/home/home-7-2.jpg"); }
+      background-image: url("../img/slides/home-7-2.jpg"); }
       body header.solution .owl-carousel .owl-item > div.slide-7-2 .caption {
         left: 45%;
         top: 20%; }
     body header.solution .owl-carousel .owl-item > div.slide-8 {
-      background-image: url("../img/home/home-8.jpg"); }
+      background-image: url("../img/slides/home-8.jpg"); }
     body header.solution .owl-carousel .owl-item > div.slide-9 {
-      background-image: url("../img/home/home-9.jpg"); }
+      background-image: url("../img/slides/home-9.jpg"); }
       body header.solution .owl-carousel .owl-item > div.slide-9 .caption {
         left: 20%;
         top: 20%; }
     body header.solution .owl-carousel .owl-item > div.slide-10 {
-      background-image: url("../img/home/home-10.jpg"); }
+      background-image: url("../img/slides/home-10.jpg"); }
       body header.solution .owl-carousel .owl-item > div.slide-10 .caption {
         left: 50%;
         top: 40%; }
@@ -419,7 +421,7 @@ body {
         height: 80vh;
         min-height: 420px; }
       body article.solution.storage .left-image {
-        background-image: url("../img/solution/solution-storage-1.jpg");
+        background-image: url("../img/slides/solution-storage-1.jpg");
         width: 20%; }
       body article.solution.storage .text {
         display: flex;
@@ -442,11 +444,11 @@ body {
             background-size: cover;
             background-position: center; }
           body article.solution.storage .right-image .owl-carousel .owl-item .slide-1 {
-            background-image: url("../img/solution/solution-storage-2.jpg"); }
+            background-image: url("../img/slides/solution-storage-2.jpg"); }
           body article.solution.storage .right-image .owl-carousel .owl-item .slide-2 {
-            background-image: url("../img/solution/solution-storage-2b.jpg"); }
+            background-image: url("../img/slides/solution-storage-2b.jpg"); }
           body article.solution.storage .right-image .owl-carousel .owl-item .slide-3 {
-            background-image: url("../img/solution/solution-storage-2c.jpg"); }
+            background-image: url("../img/slides/solution-storage-2c.jpg"); }
     body article.solution.configurations {
       background-color: #423d39;
       padding: 80px 12px; }
