--- a/includes/page-home.html
+++ b/includes/page-home.html
@@ -2,6 +2,7 @@
     <div class="owl-carousel owl-theme home">
         <div class="slide-1"></div>
         <div class="slide-1-2"></div>
+        <div class="slide-1-3"></div>
         <div class="slide-2"></div>
         <div class="slide-3"></div>
         <div class="slide-4"></div>
@@ -24,6 +25,7 @@
         <div class="slide-4"></div>
         <div class="slide-3"></div>
         <div class="slide-2"></div>
+        <div class="slide-1-3"></div>
         <div class="slide-1-2"></div>
         <div class="slide-1"></div>
         <div class="slide-1"></div>
