--- a/includes/page-solution.html
+++ b/includes/page-solution.html
@@ -2,11 +2,11 @@
     <div class="row one">
         <div class="col-12">
             <h1>Sonno</h1>
-            <p>[Noun] /son•o/</p>
-            <p><strong>Deep sleep</strong> (a) rest in a state of natural unconsciousness</p>
+            <p class="no-padding">[Noun] /son•o/</p>
+            <p class="larger"><strong>Deep sleep</strong> (a) rest in a state of natural unconsciousness</p>
             <h1>Vita</h1>
-            <p>[Noun] /vi•ta/</p>
-            <p><strong>Life</strong> (a) To live</p>
+            <p class="no-padding">[Noun] /vi•ta/</p>
+            <p class="larger"><strong>Life</strong> (a) To live</p>
             <p>To live in the world’s most exclusive places, space, comfort and even style is often sacrificed. SonnoVita provides a luxurious solution that transforms limited spaces into high functioning comfortable, and beautiful spaces.</p>
             <p>SonnoVita offers duel function; a fabulous deep night’s sleep and a stylish daily living space in the same footprint.  Our integrated livingroom / bedroom solutions are offered in dozens of exquisite finishes and are custom made to fit in your dwelling.</p>
         </div>
