--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -408,6 +408,9 @@ body {
 				max-width: 600px;
 				margin: auto;
 				padding: 0px 12px 24px;
+
+				&.larger { font-size: 22px; }
+				&.no-padding { padding: 0; }
 			}
 
 			&.storage {
