--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -829,6 +829,7 @@ body {
   body .btn {
     background-color: #55504c;
     border-radius: 999px;
+    border-width: 0px;
     box-sizing: border-box;
     color: #fff;
     display: inline-block;
@@ -862,17 +863,19 @@ body {
       height: 30px;
       vertical-align: top;
       width: 30px; }
-  body #popup {
+  body .popup {
     display: none; }
-    body #popup[aria-hidden="false"] {
-      display: flex;
-      position: fixed;
-      top: 0;
-      right: 0;
+    body .popup[aria-hidden="false"] {
+      align-items: center;
       bottom: 0;
+      display: flex;
+      justify-content: center;
       left: 0;
+      position: fixed;
+      right: 0;
+      top: 0;
       z-index: 1; }
-      body #popup[aria-hidden="false"]:before {
+      body .popup[aria-hidden="false"]:before {
         content: '';
         background-color: rgba(0, 0, 0, 0.75);
         pointer-events: none;
@@ -883,7 +886,7 @@ body {
         bottom: 0;
         left: 0;
         z-index: 1; }
-    body #popup .popup-content {
+    body .popup .popup-content {
       width: 480px;
       max-width: 100%;
       margin: auto;
@@ -891,19 +894,19 @@ body {
       position: relative;
       text-align: right;
       z-index: 1; }
-      body #popup .popup-content .image {
+      body .popup .popup-content .image {
         padding-bottom: 50vh;
         margin-bottom: 12px; }
-      body #popup .popup-content .text {
+      body .popup .popup-content .text {
         color: #fff;
         font-family: 'Roboto Condensed', sans-serif;
         font-weight: 300;
         text-align: left; }
-      body #popup .popup-content .btn {
+      body .popup .popup-content .btn {
         margin: 8px 0 0 8px; }
-        body #popup .popup-content .btn.cancel {
+        body .popup .popup-content .btn.cancel {
           background-color: transparent; }
-          body #popup .popup-content .btn.cancel:hover, body #popup .popup-content .btn.cancel:focus {
+          body .popup .popup-content .btn.cancel:hover, body .popup .popup-content .btn.cancel:focus {
             box-shadow: none;
             color: #fff; }
 
