--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -909,14 +909,45 @@ body {
 				z-index: 1;
 			}
 		}
+		&.email {
+			.popup-content {
+				background-color: #37312d;
+				box-sizing: border-box;
+				padding: 24px;
+
+				label {
+					display: block;
+					text-align: center;
+				}
+				input { 
+					color: #fff;
+					background-color: #55504c;
+					border-radius: 999px;
+					border-width: 0;
+					box-sizing: border-box;
+					display: block;
+					line-height: 24px;
+					margin: 0 0 12px;
+					padding: 12px;
+					text-align: center;
+					width: 100%;
+	
+				}
+				.disclaimer { 
+					display: block;
+					text-align: center;
+				}
+			}
+		}
 
 		.popup-content {
-			width: 480px;
+			color: #fff;
 			max-width: 100%;
 			margin: auto;
 			padding: 0 12px;
 			position: relative;
 			text-align: right;
+			width: 480px;
 			z-index: 1;
 
 			.image { 
