--- a/includes/form.html
+++ b/includes/form.html
@@ -4,17 +4,17 @@
             <label for="index" style="opacity: 0; position: absolute;">url</label>
             <input style="display: none;" id="url" type="text" name="url"/>
         </div>
-        <div class="form-group">
-            <label for="name">name</label>
+        <!-- <div class="form-group">
+            <label for="name">Name (optional)</label>
             <input type="text" name="name"/>
         </div>
         <div class="form-group">
-            <label for="phone">phone</label>
+            <label for="phone">Phone (optional)</label>
             <input type="tel" name="phone"/>
-        </div>
+        </div> -->
         <div class="form-group">
-            <label for="email">email</label>
-            <input type="email" name="email"/>
+            <label for="email">Email</label>
+            <input type="email" name="email" required/>
         </div>
 
         <span class="disclaimer">Please note the color you chose may vary slightly on different devices but rest assured we will match your desired color.</span>
