update carousel link

--- a/includes/page-home.html
+++ b/includes/page-home.html
@@ -99,7 +99,7 @@
                 <p>Choose from dozens of color schemes</p>
                 <em>Graphite Reign (pictured)</em>
             </div>
-            <a class="items" href="index.html?create&panel-a=graphite-reign&panel-b=carbon-black&couch=slate&cabinet=charcoal&headboard=violet&scheme=graphite-reign">
+            <a class="items" href="http://www.sonnovita.com/index.html?create&panel-a=graphite-reign&panel-b=stardust&couch=raspberry&cabinet=charcoal&headboard=gunmetal&scheme=graphite-reign">
                 <div class="item">
                     <div class="tile texture panels graphite-reign"><span class="name">Graphite Reign</span></div>
                     <span class="category">Panel A</span>
