--- a/includes/form.html
+++ b/includes/form.html
@@ -1,4 +1,4 @@
-<form class="popup email" name="myForm" onsubmit="return validateForm()" enctype="multipart/form-data" action="/php/mail.php" method="POST" aria-hidden="true">
+<form class="popup email" action="/php/mail.php" method="post" aria-hidden="true">
     <div class="popup-content">
         <div class="form-group">
             <label for="index" style="opacity: 0; position: absolute;">url</label>
