--- a/includes/page-solution.html
+++ b/includes/page-solution.html
@@ -25,7 +25,7 @@
         <div class="slide-7"></div>
         <div class="slide-7-2"><div class="caption arrow">The ultra suede bolster will match the headboard color you choose</div></div>
         <div class="slide-8"></div>
-        <div class="slide-9"><div class="caption">Pleanty of closet storage for you or a guest</div></div>
+        <div class="slide-9"><div class="caption">Plenty of closet storage for you or a guest</div></div>
         <div class="slide-10"><div class="caption">Lots of storage based on the custom configuration to best fit your room</div></div>
         <div class="slide-10"></div>
         <div class="slide-9"></div>
